# Conna

./: .gitignore  .scalafmt.conf  App.axaml  App.axaml.fs  Cargo.toml  Conna.fsproj  Program.fs  ViewLocator.fs  analysis_options.yaml  app.manifest  biome.json  build.mill  build.rs  bun.lockb  eslint.config.js  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  prettier.config.js  pubspec.yaml  rspack.config.ts  svelte.config.js  tsconfig.json  uno.config.ts  vite.config.js  vite.config.ts  vite.tauri.config.ts
.zed/: tasks.json
ViewModels/: MainWindowViewModel.fs  ViewModelBase.fs
Views/: MainWindow.axaml  MainWindow.axaml.fs
app/: index.tsx  router.tsx
app/hooks/: useHitokoto.ts
app/utils/: hitokoto.ts
app/views/: Splash.tsx
conna/src/: Conna.scala
frontend/: main-app.slint
frontend/globals/: utils.slint
lib/: app_router.dart  main.dart  router.dart
lib/routes/: index.dart
lib/views/: splash.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
scripts/: build.htm  build.mjs  commands.mjs  install.mjs  sdk.mjs  start.mjs  stop.mjs  version.mjs  watch.htm
src/: MainApp.tsx  app.css  app.d.ts  app.html  hooks.server.ts  index.css  index.module.scss  index.tsx  main.rs  package.json
src-frontend/: main-app.slint  native-bindings.slint
src-frontend/globals/: utils.slint
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
types/: env.d.ts  sciter.d.ts
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+15 files in other folders)
